--- a/CoverFlow/CoverFlow/Base.lproj/Main.storyboard
+++ b/CoverFlow/CoverFlow/Base.lproj/Main.storyboard
@@ -3,9 +3,10 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Cover Flow View Controller-->
+        <!--My Playlist-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CoverFlowViewController" customModule="CoverFlow" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,33 +26,76 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="scP-2C-0dj">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="8"/>
-                                        <size key="customSize" width="375" height="290"/>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KBZ-rd-5ID">
+                                <rect key="frame" x="28" y="379" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="BhZ-il-eo8"/>
+                                    <constraint firstAttribute="width" constant="44" id="w2F-xZ-CGr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="|◄">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53j-By-Wpo">
+                                <rect key="frame" x="243" y="379" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="9EL-YG-Gqb"/>
+                                    <constraint firstAttribute="width" constant="44" id="ibT-MN-fEs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="►|">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Szb-IF-aPd">
+                                <rect key="frame" x="138" y="379" width="44" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="►">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopPlayAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ReV-6h-yvH"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aerosmith" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmq-zM-CB7">
+                                <rect key="frame" x="20" y="327" width="280" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="BPY-Nf-Iw4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="0Tx-Xm-123"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="53j-By-Wpo" secondAttribute="bottom" constant="81" id="CFs-dj-ObC"/>
+                            <constraint firstItem="53j-By-Wpo" firstAttribute="leading" secondItem="Szb-IF-aPd" secondAttribute="trailing" constant="61" id="LSI-K6-uzC"/>
+                            <constraint firstItem="53j-By-Wpo" firstAttribute="bottom" secondItem="Szb-IF-aPd" secondAttribute="bottom" id="Mle-he-p96"/>
+                            <constraint firstItem="Szb-IF-aPd" firstAttribute="top" secondItem="KBZ-rd-5ID" secondAttribute="top" id="Rfn-wT-zCR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="53j-By-Wpo" secondAttribute="trailing" constant="17" id="Rnz-ff-PAS"/>
+                            <constraint firstItem="53j-By-Wpo" firstAttribute="top" secondItem="Szb-IF-aPd" secondAttribute="top" id="SRG-ET-gDi"/>
+                            <constraint firstItem="Bmq-zM-CB7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="UZa-Np-6UP"/>
+                            <constraint firstItem="Szb-IF-aPd" firstAttribute="leading" secondItem="KBZ-rd-5ID" secondAttribute="trailing" constant="66" id="adG-BC-62P"/>
                             <constraint firstAttribute="trailing" secondItem="BPY-Nf-Iw4" secondAttribute="trailing" id="eD1-R4-IzX"/>
+                            <constraint firstItem="Szb-IF-aPd" firstAttribute="bottom" secondItem="KBZ-rd-5ID" secondAttribute="bottom" id="hTG-oz-GeH"/>
+                            <constraint firstItem="Szb-IF-aPd" firstAttribute="top" secondItem="Bmq-zM-CB7" secondAttribute="bottom" constant="31" id="hU1-wj-mE6"/>
+                            <constraint firstAttribute="trailing" secondItem="Bmq-zM-CB7" secondAttribute="trailing" constant="20" id="moj-fs-plO"/>
+                            <constraint firstItem="KBZ-rd-5ID" firstAttribute="top" secondItem="BPY-Nf-Iw4" secondAttribute="bottom" constant="89" id="r4H-NA-LjP"/>
+                            <constraint firstItem="KBZ-rd-5ID" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="12" id="ra6-Yg-QEv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KBZ-rd-5ID" secondAttribute="bottom" constant="81" id="sP2-CI-MH5"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BPY-Nf-Iw4" secondAttribute="bottom" constant="214" id="sie-Kh-nVT"/>
+                            <constraint firstItem="Bmq-zM-CB7" firstAttribute="top" secondItem="BPY-Nf-Iw4" secondAttribute="bottom" constant="37" id="vxr-5a-Wf5"/>
                             <constraint firstItem="BPY-Nf-Iw4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="y5V-yZ-8nu"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <navigationItem key="navigationItem" id="3pS-ro-2GL"/>
+                    <navigationItem key="navigationItem" title="My Playlist" id="3pS-ro-2GL"/>
                     <connections>
+                        <outlet property="artistLabel" destination="Bmq-zM-CB7" id="hcs-ls-Qtc"/>
                         <outlet property="coverFlowCollection" destination="BPY-Nf-Iw4" id="uau-ZS-DO5"/>
+                        <outlet property="playButton" destination="Szb-IF-aPd" id="gUC-2V-923"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
